use-case-a/dex-hr.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: dex
  namespace: auth
spec:
  parentRefs:
  - name: ambient-ingressgateway           # Gateway name, must exist in same or another namespace
    namespace: istio-system        # If gateway is in another namespace, must specify this
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /dex/
    backendRefs:
    - name: dex         # must match a service in auth namespace
      port: 5556
