use-case-a/centraldashboard-ap-l4-ingressgateway.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: centraldashboard-l4-ingressgateway
  namespace: kubeflow
spec:
  action: ALLOW
  rules:
  - from:
    - source:
        principals:
        - cluster.local/ns/istio-system/sa/ambient-ingressgateway-istio
  selector:
    matchLabels:
      app: centraldashboard
