use-case-a/global-allow-nothing.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: global-allow-noting-deny-all
  namespace: istio-system
spec: {}
