use-case-a/jwa-ap-l4-waypoint.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: jwa-l4-waypoint
  namespace: kubeflow
spec:
  action: ALLOW
  rules:
  - from:
    - source:
        principals:
        - cluster.local/ns/kubeflow/sa/kubeflow-waypoint
  selector:
    matchLabels:
      app: jupyter-web-app
