use-case-a/jwa-ap-l7-ingressgateway.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: jwa-ap-l7-ingressgateway
  namespace: kubeflow
spec:
  targetRefs:
  - kind: Service
    name: jupyter-web-app-service
    group: ""
  action: ALLOW
  rules:
  - from:
    - source:
        principals:
        - cluster.local/ns/istio-system/sa/ambient-ingressgateway-istio
