use-case-a/profiles-ap-l7-centraldashboard.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: profiles-kfam-l7-cd
  namespace: kubeflow
spec:
  action: ALLOW
  targetRefs:
  - kind: Service
    name: profiles-kfam
  rules:
  - from:
    - source:
        principals:
        - cluster.local/ns/kubeflow/sa/centraldashboard
